<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_assignment"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:hint="@string/title"
                android:autofillHints="@string/title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/problem_statement"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etProblemStatement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textMultiLine"
                android:hint="@string/problem_statement"
                android:autofillHints="@string/problem_statement" />



        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/btnAssign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/assign"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/roundbutton"/>




</androidx.constraintlayout.widget.ConstraintLayout>